[package]
name = "bmputil"
description = "Black Magic Probe Firmware Manager"
version = "0.1.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blackmagic-debug/bmputil"
edition = "2021"
default-run = "cli"

[features]
# Enable backtraces for errors. Requires nightly toolchain.
# Automatically enabled if detect-backtrace feature is enabled (default).
backtrace = []
# Autoamtically detect if backtrace feature should be enabled by detecting the channel we're being compiled on.
detect-backtrace = []
# Automatically build libusb and statically link it instead of using system libusb.
vendored = ["rusb/vendored"]
default = ["detect-backtrace", "vendored"]

[dependencies]
anstyle = "1.0"
clap = { version = "4.0", default-features = false, features = ["std", "color", "help", "usage", "unicode", "wrap_help", "unstable-styles", "cargo"] }
env_logger = "0.11"
dfu-core = { version = "0.7.0", features = ["std"] }
dfu-libusb = "0.5.3"
rusb = "0.9"
log = "0.4"
const_format = "0.2"
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.17"
termcolor = "1.4"
goblin = { version = "0.9", default-features = false, features = ["std", "elf32", "elf64", "endian_fd"] }
libc = "0.2"
bstr = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"] }
url = { version = "2.5.4", features = ["serde"] }
rc-zip-sync = "4.2.6"
dialoguer = "0.11.0"
directories = "6.0.0"
sha2 = "0.10.8"

[target.'cfg(windows)'.dependencies]
wdi = "0.1.0"
deelevate = "0.2.0"
libc = "0.2.132"
lazy_static = "1.4.0"
winreg = "0.10.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["std", "setupapi", "winuser", "devguid"]

[build-dependencies]
rustc_version = "0.4"
static_vcruntime = "2.0"

[profile.release]
lto = "fat"
debug = 2
